Ultimos cambios para entrega

--- a/index..html
+++ b/index..html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola Mundo</title>
     	<!-- Daniel Fernandez Guarneros -->
-        <link rel="stylesheet" href="css/estilo.css">
+        <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
@@ -15,8 +14,9 @@
         <h2>Probando hacer un cambio de actualizacion con SSH</h2>
     </header>
     <div>
-        <button oneclick="hola()">Saluda</button>
+        <button onclick="hola()">Saluda</button>
     </div>
     <!-- importancia de los js -->
     <script src="js/script.js"></script>
 </body>
+<html>
